--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc && node index.js"
+    "start": "npx tsc && node index.js",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,10 @@
     "@types/express": "^4.17.21",
     "axios": "^1.6.7",
     "express": "^4.18.3"
-  }
+  },
+  
+    "devDependencies": {
+      "typescript": "^4.5.4"
+    }
+  
 }
