--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc && node index.js",
-    "build": "tsc && npm start"
+    "start": "node index.js",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
